manifests/local/polis-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polis-server
spec:
  selector:
    matchLabels:
      app: polis-server
  template:
    metadata:
      labels:
        app: polis-server
    spec:
      containers:
        - image: docker.io/compdem/polis-server:dev
          name: polis-server
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: polis-server
spec:
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  selector:
    app: polis-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polis-server
spec:
  rules:
    - host: polis.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polis-server
                port:
                  number: 5000
